Closed Bug 333109 Opened 18 years ago Closed 18 years ago

Crash [@ nsNavHistoryResult::OnItemRemoved]

Categories

(Firefox :: Bookmarks & History, defect, P1)

2.0 Branch
x86
Linux
defect

Tracking

()

RESOLVED FIXED
Firefox 2 alpha2

People

(Reporter: smaug, Assigned: brettw)

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

#7  0xb7aabe58 in nsNavHistoryResult::OnItemRemoved (this=0x8dfd3b0,
    aBookmark=0x9783510, aFolder=23, aIndex=0)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/browser/components/places/src/nsNavHistoryResult.cpp:3472
#8  0xb7aba3af in nsNavBookmarks::RemoveItem (this=0x8e49a30, aFolder=23,
    aItem=0x9783510)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/browser/components/places/src/nsNavBookmarks.cpp:916
#9  0xb7abcf31 in nsNavBookmarks::RemoveFolderChildren (this=0x8e49a30,
    aFolder=23)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/browser/components/places/src/nsNavBookmarks.cpp:1378
#10 0xb7ac5df4 in nsLivemarkService::DeleteLivemarkChildren (this=0x8d820a0,
    aLivemarkFolderId=23)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/browser/components/plac---Type <return> to continue, or q ---Type <return> to continue, or q <return> to quit---
es/src/nsLivemarkService.cpp:704
#11 0xb7ac76cc in nsLivemarkLoadListener::OnStopRequest (this=0x97ab810,
    aRequest=0x96843a0, aContext=0x0, aStatus=0)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/browser/components/places/src/nsBookmarksFeedHandler.cpp:229
#12 0xb6b0b38e in nsStreamListenerTee::OnStopRequest (this=0x9472078,
    request=0x96843a0, context=0x0, status=0)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/netwerk/base/src/nsStreamListenerTee.cpp:65
#13 0xb6b890e0 in nsHttpChannel::OnStopRequest (this=0x9684370,
    request=0x9ccf158, ctxt=0x0, status=0)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/netwerk/protocol/http/src/nsHttpChannel.cpp:4150
#14 0xb6ae4dd5 in nsInputStreamPump::OnStateStop (this=0x9ccf158)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/netwerk/base/src/nsInputStreamPump.cpp:563
#15 0xb6ae47e8 in nsInputStreamPump::OnInputStreamReady (this=0x9ccf158,
    stream=0x9819da4)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/netwerk/base/src/nsInputStreamPump.cpp:400
#16 0xb7e547c6 in nsInputStreamReadyEvent::EventHandler (plevent=0x9789f3c)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/xpcom/io/nsStreamUtils.cpp:120
---Type <return> to continue, or q <return> to quit---
#17 0xb7e72151 in PL_HandleEvent (self=0x9789f3c)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/xpcom/threads/plevent.c:688
#18 0xb7e72027 in PL_ProcessPendingEvents (self=0x89c0d08)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/xpcom/threads/plevent.c:623
#19 0xb7e74ac9 in nsEventQueueImpl::ProcessPendingEvents (this=0x89c0cd0)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/xpcom/threads/nsEventQueue.cpp:417
#20 0xb78baf8e in event_processor_callback (source=0x8c56340,
    condition=G_IO_IN, data=0x89c0cd0)
    at /home/smaug/mozilla/mozilla_cvs/18_branch/mozilla/widget/src/gtk2/nsAppShell.cpp:67
Version: unspecified → 2.0 Branch
this was missing:
#0  0xb7f6c402 in __kernel_vsyscall ()
#1  0x0061e5b6 in __nanosleep_nocancel () from /lib/tls/libc.so.6
#2  0x0061e3bc in sleep () from /lib/tls/libc.so.6
#3  0x08062c2d in ah_crap_handler (signum=11) at nsSigHandlers.cpp:132
#4  0x0806348b in nsProfileLock::FatalSignalHandler (signo=11)
    at nsProfileLock.cpp:210
#5  <signal handler called>
#6  0x08b7d0f3 in ?? ()
Summary: Crash @nsNavHistoryResult::OnItemRemoved → Crash [@ nsNavHistoryResult::OnItemRemoved]
Assignee: nobody → brettw
Priority: -- → P1
Target Milestone: --- → Firefox 2 alpha2
I'm going to speculate that this patch will fix the problem. Because of bug 333016 sometimes folders in the subscriptions view get registered as observers more than once, only one of which will get cleared when the object is removed, leaving stale references behind.

This patch doesn't fix the problem so much as work around it by refusing to register more than once and asserting. The other bug will be harder to fix and will be a while.

When the real bug is fixed, we can change these checks into asserts so we don't slow down release builds by checking every time.
Attachment #217583 - Flags: review?(annie.sullivan)
Comment on attachment 217583 [details] [diff] [review]
Patch that might fix it

r=darin
Attachment #217583 - Flags: review?(annie.sullivan) → review+
Severity: normal → critical
Patch checked in on branch and trunk. I'm not 100% sure that this will fix it since I am not sure how to reproduce it. Please reopen if you still see the crash.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".

In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body   contains   places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.

Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.

Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: