Bug 333109 r=darin. Try to fix crash in OnItemRemoved. This is a workaround for bug 333016 that prevents attaching multiple observers.

Original committer: brettw%gmail.com
Original revision: 1.67
Original date: 2006/04/10 17:24:14